<resources>
    <string name="app_name">ElRetornoDeLoRetro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tienes_cuenta_unete_a_nosotros">No tienes cuenta? Unete a nosotros.</string>
    <string name="buscador">Buscador</string>
    <string name="titulo">Titulo</string>
    <string name="tablayout">tabLayout</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="menuRegistro">Registro</string>
    <string name="registro2">Crear usuario</string>
    <string name="condiciones">Acepto los terminos y condiciones</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="provincia">Provincia</string>
    <string name="localidad">Localidad</string>
    <string name="direccion">Direccion</string>
    <string name="codigo_postal">C.Postal</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total:</string>
    <string name="add_carrito">Añadir carrito</string>
    <string name="continuar">Continuar</string>
    <string name="metodo_envio">METODO ENVIO</string>
    <string name="metodo_pago">METODO PAGO</string>
    <string name="no_se_han_a_adido_productos_al_carrito_todavia">No se han añadido productos al carrito todavia</string>
    <string name="opciones_usuario">OPCIONES USUARIO</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="acerca_de">Acerca de</string>
    <string name="modificar_datos">Modificar datos facturacion</string>
    <string name="ver_pedidos">Ver pedidos</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="reembolso">Reembolso</string>
    <string name="recibido">Recibido</string>
    <string name="metodo_envio_2">Metodo envio</string>
    <string name="telefono">Telefono</string>
    <string name="metodo_pago_2">Metodo pago</string>
    <string name="modificar">Modificar</string>
    <string name="crear_producto">Crear producto</string>
    <string name="tipo">Tipo</string>
    <string name="descripci_n">Descripción</string>
    <string name="plataforma">Plataforma</string>
    <string name="precio">Precio</string>
    <string name="no_se_han_realizado_ningun_pedido">No se han realizado ningun pedido</string>
    <string name="chat">CHAT</string>
    <string name="mensaje">Mensaje</string>
</resources>