<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="509dp"
            app:layout_constraintBottom_toTopOf="@+id/cbCondiciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbRegistro">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tvUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/usuario"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfUserReg"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/usuario"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edUserReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/email"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/email"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmailReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/password"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfPassReg"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/password"

                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/confirmar"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfConfReg"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/confirmar"
                    app:endIconMode="password_toggle">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edConfReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/nombre"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfNombre"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/nombre"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/apellidos"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfApellido"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/apellidos"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/dni"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfDni"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/dni"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/provincia"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfProvincia"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/provincia"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/localidad"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfLocalidad"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/localidad"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edLocalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/direccion"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/direccion"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_login"
                    android:text="@string/codigo_postal"
                    android:textColor="@color/md_theme_onPrimaryContainer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfCP"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/codigo_postal"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edCP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbRegistro"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:background="@color/card"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:title="@string/menuRegistro" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistr"
            android:layout_width="207dp"
            android:layout_height="66dp"
            android:text="@string/registro2"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/md_theme_onPrimaryContainer"
            app:cornerRadius="8dp"
            app:icon="@drawable/user_plus_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975" />

        <CheckBox
            android:id="@+id/cbCondiciones"
            android:layout_width="372dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/condiciones"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.966" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>