<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingFragment">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="225dp"
            android:layout_height="268dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_border"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/no_se_han_a_adido_productos_al_carrito_todavia"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShop"
            android:layout_width="match_parent"
            android:layout_height="611dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:text="@string/total"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPagar"
                android:layout_width="123dp"
                android:layout_height="59dp"
                android:layout_margin="10dp"
                android:text="@string/pagar"
                android:textColor="#000000"
                app:backgroundTint="@color/md_theme_tertiaryContainer"
                app:cornerRadius="8dp"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>