<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserOptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="394dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/card"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/opciones_usuario"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="669dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPedidos"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/ver_pedidos"
                    android:textColor="#000000"
                    app:backgroundTint="@color/md_theme_primaryFixedDim"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/receipt_solid"
                    app:iconTint="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.975" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnModificar"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/modificar_datos"
                    android:textColor="#000000"
                    app:backgroundTint="@color/md_theme_primaryFixedDim"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/user_pen_solid"
                    app:iconTint="#000000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAcercaDe"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/acerca_de"
                    android:textColor="#000000"
                    app:backgroundTint="@color/md_theme_primaryFixedDim"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/info_solid"
                    app:iconTint="#000000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContactanos"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="Contactanos"
                    android:textColor="#000000"
                    app:backgroundTint="@color/md_theme_primaryFixedDim"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/envelope_solid"
                    app:iconTint="#000000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCerrarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/cerrar_sesion"
                    android:textColor="#000000"
                    app:backgroundTint="@color/md_theme_primaryFixedDim"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/user_large_slash_solid"
                    app:iconTint="#000000" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>